[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
chrono-tz = "0.10.4"
csv-async = { version = "1.3.1", features = ["tokio"] }
env_logger = "0.11.8"
logs = "0.7.1"
matrix-sdk = "0.14.0"
salvo = { version = "0.84.2", features = ["cors"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
