[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
chrono-tz = "0.10.4"
csv-async = { version = "1.3.1", features = ["tokio"] }
env_logger = "0.11.8"
teloxide = { version = "0.17.0", features = ["macros"] }
salvo = { version = "0.84.2", features = ["cors"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-retry = "0.3.0"
toml = "0.9.8"
log = "0.4.28"
matrix-sdk = { version = "0.12.0", features = ["sqlite", "e2e-encryption", "markdown"] }
salvo_extra = {version="0.84.2",features=["concurrency-limiter"]}
dashmap = "6.1.0"

